# breeze

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  flake.nix  package.nix  shell.nix
benchmarks/: CMakeLists.txt  bench_matmul.cu
demo/: main.cpp  main.cu
include/: ops.cuh  ops.h  ops_kernels.cuh  tensor.cuh  tensor.h
src/: main.cpp  ops.cu  tensor.cu
tests/: CMakeLists.txt  test_tensor.cpp  test_tensor.cu
